fixed bug that caused overflow of characters when new tweet was submitted

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -36,10 +36,10 @@ article.tweet:hover {
   align-items: center;
 }
 
-#tweet-container .tweet-text {
+article .tweet-text {
   position: relative;
   width: 100;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   border: 3px solid black;
   padding: 10px;
   border-top: none;
@@ -49,12 +49,14 @@ article.tweet:hover {
   margin-left: 1em;
   margin-right: 1em;
   margin-bottom: 0.5em;
+  word-break: break-all
 }
 
 .tweet {
   margin-top: 10px;
   width: 110%;
-  margin-bottom:10px
+  margin-bottom: 10px;
+  
 }
 
 .tweet:hover {
